...
//

import UIKit

class DictionaryViewController: UIViewController,UITableViewDelegate,UITableViewDataSource {
    var dictionaryResponse:[Definition] = []
    var dictionaryResults = UITableView()
    var queryParameter = UITextField()
    var searchButton = UIButton()
    var dictionaryService:DictionaryServicable
    
    init(dictionaryService:DictionaryServicable) {
        self.dictionaryService = dictionaryService
        super.init(nibName: nil, bundle: nil)
...
